fixed z-index of nav

--- a/weather/css/citystyle.scss
+++ b/weather/css/citystyle.scss
@@ -205,6 +205,7 @@ nav {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 3;
     ul {
         display: flex;
         flex-direction: row;
